feat(nop-plugin-enhancement): plan-2026-08-14-2007 W6 parent 层级 + HMR 落地（parent 链 + reload 快照重建 + 变更检测）
- parent 层级：子容器 parent 链（跨定义服务沿链回退）+ 配置层叠（父热应用传播）+ 级联 destroy（manager 全局父子映射 + 实例级 children）
- P2-D 显式 deactivate 守卫 + 环防护 + createInstance 检查顺序（checkLoaded → 重复 key → 父状态 → 门控）
- reloadPlugin + P2-A 快照重建（pending 恢复 + reconcile 收敛 + jar 轨显式失败）
- VFS 轨变更检测接线：真实 lastModified + checkChangedAndReload 显式入口
- 测试：TestParentHierarchy 7 用例 + TestReloadPlugin 5 用例 + 3 个 plugin.xml 夹具（manager 61/61 全绿）

Plan: ai-dev/plans/2026-08-14-2007-3-parent-hierarchy-hmr.md